tests/invalid/ann_assign_non_name/main.py
xs: list[int] = [1]
xs[0]: int = 2
